[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Title.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/Main.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/settings.gd" type="Script" id=3]
[ext_resource path="res://fonts/BRUS_TYP.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.4, 0.4, 0.4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 548.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
align = 1

[node name="Master" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 984.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Master"]
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Volume"

[node name="Value" type="HSlider" parent="MarginContainer/VBoxContainer/Master"]
margin_left = 154.0
margin_top = 19.0
margin_right = 880.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 4
tick_count = 20

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer/Master"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "0%"

[node name="FX" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 984.0
margin_bottom = 228.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FX"]
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Effects"

[node name="Value" type="HSlider" parent="MarginContainer/VBoxContainer/FX"]
margin_left = 154.0
margin_top = 19.0
margin_right = 880.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 4
tick_count = 20

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer/FX"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "0%"

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 984.0
margin_bottom = 290.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Music"]
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="Value" type="HSlider" parent="MarginContainer/VBoxContainer/Music"]
margin_left = 154.0
margin_top = 19.0
margin_right = 880.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 4
tick_count = 20

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer/Music"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "0%"

[node name="ControlsOpacity" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 984.0
margin_bottom = 352.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ControlsOpacity"]
margin_right = 156.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "UI opacity"

[node name="Value" type="HSlider" parent="MarginContainer/VBoxContainer/ControlsOpacity"]
margin_left = 160.0
margin_top = 19.0
margin_right = 880.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 4
tick_count = 20

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer/ControlsOpacity"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "0%"

[node name="Difficulty" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 984.0
margin_bottom = 480.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Difficulty"]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 87.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Difficulty"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/Difficulty"]
margin_left = 154.0
margin_right = 984.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 167.0
margin_top = 488.0
margin_right = 817.0
margin_bottom = 548.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 100

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 250.0
margin_right = 400.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Apply"

[node name="Revert" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 500.0
margin_right = 650.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Revert"
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Master/Value" to="." method="_on_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/FX/Value" to="." method="_on_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music/Value" to="." method="_on_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ControlsOpacity/Value" to="." method="_on_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Revert" to="." method="_on_Revert_pressed"]
